--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="XMLParser.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/jonas.franz/Documents/GitHub/XMLParser/doc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
